frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend
    spec:
      containers:
        - name: fe-con
          image: komal0116/3-tier-docker:frontendnew
          ports:
            - containerPort: 80
