frontend/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: fe-svc
spec: 
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
